# windows-tutorial

./: CMakeLists.txt  FirstWindow.h  WindowTemplate.h  basewin.h  main.cpp
windows_lib/: CMakeLists.txt  FirstWindow.cpp  MainWindow.cpp  MainWindow.h  SafeRelease.h  basewin.h
